src/angular/planit/src/assets/sass/components/marketing/_pricing-hero.scss
.pricing-section.pricing-hero {
  min-height: 42rem;
  background-color: $neutral-1;
}

.pricing-hero > .section-content {
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
  justify-content: flex-start;

  @media screen and (max-width: $pricing-breakpoint-hero) {
    flex-flow: column nowrap;
  }

  > .overview {
    flex: initial;
    min-width: $pricing-headline-min-width;
    max-width: $pricing-headline-max-width;
    margin-right: 4%;

    @media screen and (max-width: $pricing-breakpoint-hero) {
      display: flex;
      flex-flow: column nowrap;
      align-items: center;
      justify-content: flex-start;
      margin-right: 0;
      text-align: center;
    }

    > .superhead {
      margin-bottom: $space-small;
      font-size: $text-small;
      font-weight: $font-weight-bold;
      text-transform: uppercase;
    }

    > .heading {
      margin-bottom: $space-xlarge;
      font-size: $text-display;
      font-weight: $font-weight-light;
    }

    > .description {
      margin-bottom: $space-xxlarge;
    }

    > .button {
      margin-top: $space-xxlarge;
    }
  }

  > .image {
    position: relative;
    width: auto;
    height: 100%;

    @media screen and (max-width: $pricing-breakpoint-hero) {
      display: none;
    }
  }
}

